# HCI-project

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yaml  package-lock.json
api/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
api/app/: export.py  pre_serve.py  preprocess.py
api/app/pawls/preprocessors/: pdfplumber.py
api/config/: configuration.json
api/core/: config.py  events.py  logging.py  setup.py
api/db/: database.py  events.py
api/db/repositories/: users.py
api/models/domain/: __init__.py  doc_commit.py  doc_structures.py  documents.py  ontologies.py  rwmodel.py  tasks.py  users.py
api/models/schemas/: __init__.py  annotations.py  documents.py  jwt_tokens.py  mongo.py  ontologies.py  rwschema.py  tasks.py  users.py
api/routers/: annotation.py  api.py  auth.py  doc.py  logout.py  ontology.py  refresh.py  task.py  upload.py  user.py
api/schemas/: jwt_tokens.py  users.py
api/services/: doc.py  oauth2.py  ontology.py  task.py  user.py
api/utilities/: configuration.py  onto_utilities.py  user_utilities.py  utilities.py
api/utils/: configuration.py  oauth2.py  user_utils.py  utils.py
proxy/: local.conf
ui/: .eslintrc.js  package.json
ui/src/: App.tsx  index.tsx
ui/src/api/: annotation.ts  auth.ts  axios.ts  doc.ts  index.ts  ontology.ts  schemas.ts  upload.ts  useAnnotationApi.ts  useAuthApi.ts  useAxiosPrivate.ts  useDocumentApi.ts  useOntologyApi.ts  useTaskApi.ts  useUploadApi.ts  useUserApi.ts
ui/src/components/: AnnotationSummary.tsx  AnnotationsByClass.tsx  PDF.tsx  PersistLogin.tsx  Selection.tsx  (+5 more)
(+101 files in other folders)
