[tool.poetry]
name = "api"
version = "0.1.0"
description = "API module for Onto-PAWLS project."
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

aiofiles = "^23.2.1"
beanie = "^1.23.1"
fastapi = "^0.104.1"
owlready2 = "^0.44"
pandas = "^2.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pdfplumber = "^0.10.3"
python-json-logger = "0.1.10"
python-multipart = "^0.0.6"
rdflib = "^7.0.0"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-env = "^1.1.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
